[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/player/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://audio/speed.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/kill.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 1 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Collision_Kinematic" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 9.0

[node name="Speed_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Kill_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="Area2D" to="." method="_on_playerAreaEntered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_playerEntered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldownTimeout"]
